fix(fix filter category on mobile): fix filter category on mobile

--- a/src/components/CategoriesTitleMainPage/CategoriesTitleMainPage.module.scss
+++ b/src/components/CategoriesTitleMainPage/CategoriesTitleMainPage.module.scss
@@ -52,14 +52,14 @@
   .category {
     position: relative;
     &__button {
-      position: relative;
       display: flex;
       align-items: center;
+      justify-content: space-between;
       width: 100%;
-      height: 44px;
+      height: 52px;
       border: 1px solid #d3e2f7;
       border-radius: 10px;
-      padding: 10px 15px;
+      padding: 16.5px 23px 16.5px 30px;
       text-align: left;
       background: linear-gradient(0deg, #f8fafc, #f8fafc);
       transition: max-height 0.3s ease;
@@ -70,19 +70,32 @@
         $mobile-lh-small-14,
         $color-blue-dark-title
       );
+      &_img {
+        width: 12px;
+        height: 8px;
+        &_down {
+          background: url(../../images/botDetails_images/arrowDown.svg)
+            no-repeat center;
+          &:hover {
+            background-image: url(../../images/botDetails_images/arrowDown-hover.svg);
+          }
+          &:active {
+            background-image: url(../../images/botDetails_images/arrowDown-pressed.svg);
+          }
+        }
+        &_up {
+          background: url(../../images/botDetails_images/arrowUp.svg) no-repeat
+            center;
+          &:hover {
+            background-image: url(../../images/botDetails_images/arrowUp-hover.svg);
+          }
+          &:active {
+            background-image: url(../../images/botDetails_images/arrowUp-pressed.svg);
+          }
+        }
+      }
     }
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      right: 15px;
-      width: 44px;
-      height: 44px;
-      background: url(../../images/botDetails_images/arrowDown.svg) no-repeat
-        center;
-      transform: translateY(-50%);
-      pointer-events: none;
-    }
+
     &__image {
       width: 25px;
       height: 25px;
@@ -116,12 +129,12 @@
       &_input {
         width: 100%;
         min-height: 21px;
-        height: auto;
-        margin: 10px 4px 15px 10px;
-        padding: 10px 20px 10px 50px;
+        height: 48px;
+        margin: 15px 10px;
+        padding: 14.5px 20px 14.5px 50px;
         outline: none;
         background: url(../../images/search-min.svg) no-repeat;
-        background-position: 20px 10px;
+        background-position: 20px 14.5px;
         @include text(
           $mobile-font-14,
           $weight-300,
@@ -129,30 +142,8 @@
           $color-blue-dark-title
         );
         @include input($border-main, $background-bots-main);
-      }
-      &_input::placeholder {
-        border-radius: 5px;
-        padding: 4px 6px;
-        font-size: 10px;
-        line-height: 12.5px;
-        font-weight: 400;
-        background-color: #d3e2f7;
-        color: #3b7dd6;
-      }
-      &_button {
-        border: none;
-        padding-right: 10px;
-        text-align: right;
-        background-color: inherit;
-        background: url(../../images/images-for-mobile/delete/delete-sizeMobile.svg)
-          no-repeat center;
-        width: 44px;
-        height: 44px;
-        &:focus {
-          background-image: url(../../images/images-for-mobile/delete/delete-sizeMobile-hover.svg);
-        }
-        &:active {
-          background-image: url(../../images/images-for-mobile/delete/delete-sizeMobile-pressed.svg);
+        &::placeholder {
+          @include text($mobile-font-14, $weight-300, $mobile-font-14, #84a7d5);
         }
       }
     }
@@ -162,7 +153,6 @@
       align-items: center;
       max-height: max-content;
       height: 44px;
-      margin-top: 5px;
       border-bottom: 0.5px solid #d3e2f7;
       padding: 5px 10px 5px 0;
       cursor: pointer;
@@ -189,6 +179,60 @@
     .category__checkbox_checked .category__icon {
       border: 1px solid #3b7dd6;
       background: url(../../images/checkmark.svg) no-repeat center;
+    }
+
+    .inputContainerfor2 {
+      display: flex;
+      align-items: center;
+      padding-left: 10px;
+      width: 100%;
+      margin-top: 26.5px;
+    }
+
+    .inputContainer2 {
+      display: flex;
+      flex-wrap: wrap;
+      width: 242px;
+      min-height: 42px;
+      height: auto;
+      border: 1px solid #d3e2f7;
+      border-radius: 10px;
+      padding: 10px 20px;
+    }
+
+    .itemContainer {
+      /* text-wrap: wrap; */
+      height: 24px;
+      width: fit-content;
+      border-radius: 5px;
+      padding: 4px 6px 4px 10px;
+      margin: 0 5px 5px;
+      background-color: #d3e2f7;
+      display: flex;
+      align-items: center;
+    }
+    .itemLabel {
+      /* text-wrap: wrap; */
+      @include text(10px, $weight-400, 12.5px, #3b7dd6);
+    }
+    .itemCloseSvg {
+      border: none;
+      width: 16px;
+      height: 16px;
+      background: url(../../images/images-for-mobile/buttonCloseSubmenu/closeButton.svg)
+        no-repeat center;
+      background-size: 7px 7px;
+      cursor: pointer;
+    }
+
+    .itemDeleteCategories {
+      border: none;
+      margin-left: 28px;
+      width: 44px;
+      height: 44px;
+      background: url(../../images/images-for-mobile/buttonCloseSubmenu/closeButton.svg)
+        no-repeat center;
+      cursor: pointer;
     }
   }
 }
